[package]
name = "nft-metadata"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[dependencies]
solana-program = "1.8.2"
solana-sdk = "1.8.2"
solana-client = "1.8.2"
thiserror = "1.0.32"
log = "0.4.17"
env_logger = "0.9.0"
retry = "1.3.1"
mpl-token-metadata = "1.3.4"
borsh = "0.9.1"
serde = "1.0.143"
serde_derive = "1.0.143"
serde_json = "1.0.83"
tokio = "1.14.1"
reqwest = { version = "0.11", features = ["json"] }
arloader = "0.1.62"
tempdir = "0.3.7"
url = "2.2.2"
rayon = "1.5.3"
glob = "0.3.0"
futures = "0.3.23"
colored = "2.0.0"